
2018-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (validate_indexed_key_field): added missing checked for
	  valid keys in files with split keys

2018-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_validate_field): deactivated questionable incrementing
	  if reference-counter for GLOBAL fields

2018-09-12  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (file_description_entry): unset current_file on error;
	  check for duplicate file description
	* tree.c (finalize_file): check for missing file description
	* tree.c (finalize_report): early set of flag_report
	* typeck.c (warning_destination): added missing check for tree tag
	* typeck.c (move_warning): allow literals in all contexts other
	  than SET to be used as source reference
	* typeck.c (error_if_invalid_file_from_clause_literal):
	  allow [RE]WRITE FILE FROM constant / numeric literal if
	  cb_relaxed_syntax_checks is set as MicroFocus/ACUCOBOL allow this
	  non-standard option; only raise either figurative or literal error

2018-09-11  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (evaluate_other): partial implementation of FR #288
	  WHEN OTHER without imperative statement
	* codegen.c (output_stmt): disabled lookup_source calls that seem
	  to be not needed
	* parser.y (perform_body): partial implementation of FR #288
	  check inline PERFORM without imperative statement against
	  configuration "missing-statement"
	* cobc.c (process_command_line): make sure cb_missing_statement
	  is not stricter than CB_WARNING when cb_relaxed_syntax_checks is active
	* scanner.l (copy_literal): check that passed argument is a literal

2018-09-11  Ron Norman <rjn@inglenet.com>

	* tree.c, codegen.c: added checks for cb_flag_remove_unreachable
	* scanner.l: duplicate 78/CONSTANT and then assign line number
	* tree.c: improved warnings to be more inclusive

2018-09-10  Ron Norman <rjn@inglenet.com>

	* tree.c: removed redundant warnings about xyz 'is always' TRUE/FALSE