@@ -1507,6 +1507,7 @@ struct cb_program {
 	cb_tree			global_file_list;	/* Global files */
 	struct handler_struct	global_handler[5];	/* Global handlers */
 	cb_tree			collating_sequence;	/* COLLATING */
+	cb_tree			collating_sequence_n;	/* COLLATING FOR NATIONAL*/
 	cb_tree			classification;		/* CLASSIFICATION */
 	cb_tree			cursor_pos;		/* CURSOR */
 	cb_tree			crt_status;		/* CRT STATUS */
